--- a/Client/wwwroot/staticwebapp.config.json
+++ b/Client/wwwroot/staticwebapp.config.json
@@ -1,6 +1,3 @@
 {
-  "navigationFallback": {
-    "rewrite": "index.html",
-    "exclude": [ "/_framework/*", "/css/*" ]
-  }
+  "navigationFallback": {"rewrite": "index.html", "exclude": ["/_framework/*", "/css/*"]}
 }
